# Demand_Forecasting

./: demand_forecasting_implementation_plan.md  model.py  pyproject.toml
backend/: monthly_sales_data.csv  sales_data.csv
backend/app/: __init__.py  forecast.py  insights.py  main.py  schemas.py
backend/data/outputs/: blender_forecast_next3m.csv  feature_importance.csv
backend/data/outputs/cv_outputs/: cv_rows_multistep.csv  metrics_by_category_byH.csv  metrics_by_channel_byH.csv  metrics_by_segment_byH.csv  metrics_by_series_byH.csv  metrics_overall_ALL.csv  metrics_overall_byH.csv
data/outputs/: blender_forecast_next3m.csv  feature_importance.csv
data/outputs/cv_outputs/: cv_rows_multistep.csv  metrics_by_category_byH.csv  metrics_by_channel_byH.csv  metrics_by_segment_byH.csv  metrics_by_series_byH.csv  metrics_overall_ALL.csv  metrics_overall_byH.csv
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
