[project]
name = "demand-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "httpz>=1.0",
    "lightgbm>=4.6.0",
    "pandas>=3.0.3",
    "prophet>=1.3.0",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.48.0",
]
